Fix the way we do notifications so we don't notify twice for <head>.  Bug 332644, r=mrbkap, sr=peterv